Fixed styling and truncated data + using devs team only

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,8 +45,7 @@ footer {
 .contributor {
   float: left;
   width: 32%;
-  /*width: 48%;*/
-  min-height: 140px;
+  min-height: 200px;
   margin-bottom: 2em;
   margin-right: 2%;
 }
